--- a/src/components/game/sprint-game/sprint-game.module.css
+++ b/src/components/game/sprint-game/sprint-game.module.css
@@ -5,7 +5,7 @@
   /* background-color: #F5F5F5; */
   /* width: 100vw; */
   /* height:1080px; */
-  height: 100vh;
+  /* height: 100vh; */
 }
 .printChallengePageContainer{
   display: flex;
